Добавлен вывод в Main и немного изменен коллектор